--- a/ProyectoGestiónEscolar/CapaPresentacion/Listado_Alumnos.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Listado_Alumnos.resx
@@ -166,4 +166,42 @@
         a76DFVBPNlG9m10/5f39brjhhhtuuOHGPIGHx/8AdQEyniUmAB8AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btn_guardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAB5RJREFUaEPtWXtwVNUdjjPOdGxtra0zknGm7R+dPqzT+hha0SRotRBEgZCYB8km
+        PJLNO5HsbhKSTTbZTTYBk0BwiKgjEEUEJeKDhirBtFUsSoDsZsljN4GKoFNLYIHW7N7F/fo7d+9ud++e
+        JLsb4R/zzXyze+/d853vd87vd+65d6NmMYtZzCII7sHBHzut/fcIo+b7GNl3t8XyI+lyyLB/8JNbL/Tc
+        8Vv0Rt0onbo2YIaFEXOu02p6w2Ez/9tpM4NHzzVTFzFnsoCAqBvsB+dsutgTfe+lnmg7EfaD0X+7JkE4
+        xvp/4bCaXnLYTE6e4anI2jis5h0TNsvPJTkf2MiT6RZm3ks2E9LlmQPn+r5LJtbTiApyY+FS1LCajO4z
+        H90kyYu4dGiOwhfAwTkXLvb+9IfSpZlBzGmbeVhuZOY0DTpHLHdL3XhS6b3oFfae6NYr795+l3R6ZqB0
+        SYokXUIlaTtYH1J3kQNRUTdciEsqOB+X8mvpVJRjxLw4lJR5rbUJujWZ0CtX+ahbk4VXNzRwfy8nG6AJ
+        W3+81G1kYMYpAIzHJm5jx8LYwFwquK94HTLaBz7B+Il/iNRmZfi++9P/vN38MVfHS+rrv2zpFc1EAjYD
+        4/MT0y7OT/kZxvpuIdFT8k4Yabqhy1FCpVBCs7JQZF5SJlRZ+UFk572/KcvMhXZ1Nhwj/UGaPlpNNvfQ
+        0PclS5GD0qZDLj5BHX/x8V/x9rPtqMxfhy2b90/JbS8eRmfnJ+jY3C0eP7/1fejLW9DV3oLPj/SKevI+
+        RFpNm9nqQ6tQpmQnPIjrvM3skgtXr1yF8jUlqMhWoU7TBsO6LVOy45kD2L79CAxVnuPWpl0U1IeoVGpI
+        pxQViswAfS9ZzTks3Xfa34++T7IUHqigtgWJ0mjlLk1E544j4qjOmKSTl5CC/wweC+jH15/V/IJkJzxg
+        uO+2yZbMfVvaoXwiAemPLkL6n2ZAap/zxDLsbW8N6sNLqrMJnD4R/k2MbizZPEEvn63RoqZyB5rXvxsx
+        ddpd2KjRcPUDOGrKkmyFDmq4N0jIj3vaNqDiqWdQtErLNTcdi1ZWoUq1FZ3G6e8PNAt7JFuhgxqekwv5
+        s2fbc1Dlr0d+hpprcDrWVr0MdXEr9m/dzNUPoNV0RrIVGvCp+VaukB+P7XsVZTk1vgCMxv3QFm1EU/OB
+        ILOMjYa3oC3ehObmv4jHBYpylOUZ8NHul7j6crqt1h9I9qaH03biN6yR6+wpyr8BrqDtUDfWrirzBaBO
+        LsbfH1iEivhUGJu6A8wb6vei9uEleH3eAlRrnhfP5aersHZ1BSwH9nH15XQMm38l2Zsewkj/H1gj1+f/
+        pAAsXMEv+z5EyYpcXwD1tXugf3gpBmOWoHxhCpqkIPR1r6PmoccxErMU5fEpvuBUhS0oVRTh7OFDXH05
+        hZETv5fsTQ9vAFOR3T0LEjMCakBfRyP9SILH7IIk6NZ1Qhf3GAZjl0HzWLovKEZDfRcKk1fisqWPqy9n
+        WAE4rJY7eSJyFj2ZHlTEbCbqaCZO0kzo5j2KIXHkKa2oRvx/l0ftCpLSubo8hpVCsFhupqXLzRPyZ2mq
+        ZwaapML0sqb8RWx5cCHYjrYyZiEaG94OuM4KmbUrScng6srJvLCnQMleaKCGUy6jjKoVChSvroHB8KbP
+        HMv5WpoBlkbNMfEYiqWaWJQWmD76fSheU4u1aaEFEPYyykBR7+aK+bE8Iwvayu1obHzHY15HhfzQEjHn
+        Kx6nhxodFfAfl8HKjlkBS2lUW70TZXQPYQPA05WTtjQ7JVuhY7qtBGNDQSHdkDppRLtgqOui3F+C4ZgE
+        qKlgjcY/i2brda+h5pHlGI5dKi6x7D5RpX4OmuI21GYrubpBjGQrwW4c4pMRT1BiR3U11AVPQ1OyCZW0
+        rh99cDG3YNnMsMJ+64F4aDUv0B24jdpsRJtazdVlS7dwdkz8TqN/xd3f/z3JVnjgbaf9ubtlPcoKmrE2
+        rxENDW+iItcYZN5LNkvlOQZxBkqVBnEGOhv1XN2r578Ag+vc6ci30wyTPdB4eXD7VgpgA+prdnFNT8bC
+        rEqoi57GOx3tXF3hUyuu2s/DeeqkwHvxFRbYSydeJ4xHu2g/pNQhX6HhGp2MbBuhon3Q4d07uLr/p0kv
+        2YgcLP/El06cDkZ7KR2ySqGnvQ7P6GRkvy9RFIv7KZ4uI6XOgPxtXdhwHU1d7OxLzRGGu+dSPVwO7sQE
+        Q34h8pYl05PV8pCZTU9zG0pLA7T8SX1dcowM+N5JRQThaKrKdSwNHqZ+MGEdWBDKi61w6PrXZ7RhPB1w
+        zjHU5XIdzzwn9KXfL1mJDEJfWrc3APrudlvjvyPYzPMoiElfn4dD4bNRcaWB2w3nmGfHS9pfCmZjEQ3Y
+        kPN48u8kK5Hh6rEUBTPuCSB1Lzt35v6km9jUUk2clBsKm2Mn8fVXV/D15QviMeW82TFk+qXY+TcF4Xjy
+        XFYH6J1/43js8oXjsYlXx2OSUq/H6/VvHOPzE+4aj0vquRiX6Htnea3+4LjuEP9iGjUraTRfofQa423F
+        PedMo2R8J31mR/Kf2XUD20cF/ckXzkP5LGYxi28LoqL+B+3mYg/6u3kFAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
